<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_margin="10dp"
            android:background="@drawable/filter"
            android:contentDescription="@string/filter_icon" />
        
        <TextView
            android:id="@+id/nofilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/filter_un_shape"
            android:fontFamily="@font/product_sans_regular"
            android:layout_margin="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/no_filter"/>
        <TextView
            android:id="@+id/hightolow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/filter_un_shape"
            android:fontFamily="@font/product_sans_regular"
            android:layout_margin="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_gravity="center"
            android:text="@string/high_to_low"/>
        <TextView
            android:id="@+id/lowtohigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/filter_un_shape"
            android:fontFamily="@font/product_sans_regular"
            android:layout_margin="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_gravity="center"
            android:text="@string/low_to_high"/>



    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/filter"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newNotesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="26sp"
        android:clickable="true"
        android:contentDescription="@string/newnote"
        android:focusable="true"
        app:backgroundTint="@color/red"
        app:srcCompat="@drawable/baseline_add_24" />


</RelativeLayout>